# alpasim

./: .coderabbit.yaml  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .release.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MAINTAINERS.md  README.md  build.sh  mypy.ini  pyproject.toml  setup_local_env.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  feature.md
data/: .gitignore  README.md  download_vavam_assets.sh
docs/: DATA_PIPELINE.md  DESIGN.md  ONBOARDING.md  TUTORIAL.md  aws_connect.txt
src/controller/: .release.json  README.md  pyproject.toml
src/controller/alpasim_controller/: server.py  system.py  system_manager.py
src/controller/tests/: test_server.py  test_system.py
src/controller/tools/: plot_controller.py
src/driver/: .release.json  pyproject.toml
src/driver/src/alpasim_driver/: __main__.py  demo_tests.py  frame_cache.py  main.py  physics.py  safety_validator.py  schema.py
src/driver/src/alpasim_driver/tests/: __init__.py  test_service_flow.py  test_session.py
src/eval/: .gitignore  .release.json  README.md  pyproject.toml
src/eval/tests/: README.md  test_modifiers.py  test_processing.py
src/grpc/: .gitignore  .release.json  MANIFEST.in  README.md  pyproject.toml  tutorial.md
src/grpc/alpasim_grpc/: __init__.py
src/grpc/alpasim_grpc/v0/: __init__.py  common.proto  controller.proto  egodriver.proto  logging.proto  physics.proto  runtime.proto  sensorsim.proto  traffic.proto
src/grpc/scripts/: __init__.py  compile_protos.py
src/physics/: .dockerignore  .gitattributes  .gitignore  .release.json  README.md  pyproject.toml
src/physics/alpasim_physics/: __init__.py  backend.py  server.py  utils.py
src/physics/tests/: test_backend.py
src/runtime/: .gitignore  .release.json  README.md  pyproject.toml
src/runtime/alpasim_runtime/: __init__.py  autoresume.py  camera_catalog.py  config.py  delay_buffer.py  dispatcher.py  logs.py  loop.py  metrics.py  noise_models.py  route_generator.py  scene_cache_monitor.py  types.py
src/runtime/alpasim_runtime/replay_services/: README.md  __init__.py  asl_reader.py  base_replay_servicer.py  controller_replay_service.py  driver_replay_service.py  physics_replay_service.py  sensorsim_replay_service.py  traffic_replay_service.py
src/runtime/alpasim_runtime/services/: controller_service.py  driver_service.py  physics_service.py  sensorsim_service.py  service_base.py  service_pool.py  traffic_service.py
src/runtime/alpasim_runtime/simulate/: __main__.py
src/runtime/notebooks/: README.md  read_logs.ipynb  replay_logs_alpamodel.ipynb
src/runtime/tests/: README.md  fixtures.py  test_asl_replay.py  test_autoresume.py  test_camera_catalog.py  test_config.py  test_delay_buffer.py  test_logs.py  test_loop.py  test_noise_models.py  test_route_generator.py  test_runtime_integration_replay.py  test_scene_cache_monitor.py  test_smoke.py  test_types.py  test_with_mocks.py
src/runtime/tests/data/: valid_network_config.yaml  valid_user_config.yaml
src/runtime/tests/data/integration/: 0.asl  6ea1c7a3-98b7-4adc-b774-4d9526371a0b.usdz  generated-network-config.yaml  generated-user-config-0.yaml
src/runtime/tests/data/mock/: network-config.yaml  user-config.yaml
src/runtime/tests/data/route_generator_sanity/: sanity_off_route.usdz
src/runtime/tests/services/: test_controller_api.py
src/tools/: __init__.py  pyproject.toml
src/tools/map_utils/: __init__.py  plot_map.py  test_plot_map.py
src/tools/metrics/: README.md  docker-compose.yaml  view-metrics.sh
src/tools/run-on-ord/: resume_slurm_job.sh  resume_template.sh  submit.sh
src/tools/scripts/: launch-vscode-auto-port.sh
src/utils/: README.md  pyproject.toml
src/utils/alpasim_utils/: __init__.py  artifact.py  logs.py  polyline.py  qvec.py  scenario.py  trajectory.py
src/utils/tests/: test_artifact.py  test_logs.py  (+2 more)
src/wizard/: .gitignore  pyproject.toml
(+87 files in other folders)
