[build-system]
requires = [ "setuptools>=61.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "alpasim_controller"
version = "0.11.0"
description = "A simple, open source controller + vehicle model"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy",
    "do_mpc",
    "pytest",
    "matplotlib",
    "alpasim_grpc",
    "alpasim_utils",
]

authors = [
{name = "Michael Watson", email = "mwatson@nvidia.com"},
]

[tool.setuptools.packages.find]
include = [ "alpasim_controller", "tests" ]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
alpasim_grpc = {workspace = true}
alpasim_utils = {workspace = true}
